--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.ts",
   "scripts": {
     "build": "rollup -c",
     "prepublish": "npm run build"
@@ -29,5 +30,12 @@
     "@babel/preset-env": "^7.11.0",
     "@rollup/plugin-babel": "^5.1.0"
   },
-  "homepage": "https://github.com/IbrahimShamma99/arabic-date#readme"
+  "homepage": "https://github.com/IbrahimShamma99/arabic-date#readme",
+  "dependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.2.2"
+  }
 }
